# Biblioteca-Corporation-Beginner

./: README.md  push-auto.ps1
.github/workflows/: ci.yml  codeql.yml  publish-cgo.yml  publish-clojure.yml  publish-crates.yml  publish-d.yml  publish-elixir.yml  publish-erlang.yml  publish-fsharp.yml  publish-gem.yml  publish-gh-pages.yml  publish-haskell.yml  publish-kotlin.yml  publish-lua.yml  publish-maven.yml  publish-npm.yml  publish-nuget.yml  publish-objc.yml  publish-perl.yml  publish-php.yml  publish-pypi.yml  publish-r.yml  publish-scala.yml  publish-swift.yml
Bibliotecas/: Makefile  README.md  biblioteca.c  biblioteca.h  expansao_recursos.md
Bibliotecas/ai/: README.md  ai.c  ai.h  astar.c  astar.h  fuzzy.h  graph.c  graph.h  neuralnet.h
Bibliotecas/audio/: README.md  audio.c  audio.h  ogg.h  tone.c  tone.h  wav.h
Bibliotecas/bindings/: README.md  README_EXAMPLES.md  biblioteca.i
Bibliotecas/graphics/: README.md  blend.c  blend.h  color.c  color.h  draw.c  draw.h  font.h  image.h
Bibliotecas/input/: README.md  input.c  input.h
Bibliotecas/math/: README.md  interpolation.c  interpolation.h  matrix2d.c  matrix2d.h  matrix3d.h  quaternion.h  random.c  random.h  stats.c  stats.h  trig.c  trig.h  (+2 more)
Bibliotecas/wasm/: CMakeLists.txt  README.md
api_server/: Dockerfile  README.md  README_DEPLOY.md  app.py  app_win.py  db_neon_example.py  endpoints.py  endpoints_extra.py  package.json  server.js  server_win.js
frontend/: App.jsx  README.md  index.html  package.json  vite.config.js
mobile/: .env  App.js  README.md  babel.config.js  package.json
(+84 files in other folders)
